Improvements to Lucene Directory performance tests