@@ -98,7 +98,7 @@ public class PerformanceCompareStressTest {
    }
    
    @Test
-   public void profileTestInfinispanDirectoryWithNetworkDelayZero() throws Exception {
+   public void profileTestInfinispanDirectoryWithNetworkDelayZero() throws InterruptedException, IOException {
       // TestingUtil.setDelayForCache(cache, 0, 0);
       InfinispanDirectory dir = new InfinispanDirectory(cache, cache, cache, indexName, CHUNK_SIZE);
       stressTestDirectory(dir, "InfinispanClustered-delayedIO:0");
@@ -175,6 +175,45 @@ public class PerformanceCompareStressTest {
    
    private void verifyDirectoryState() {
       DirectoryIntegrityCheck.verifyDirectoryStructure(cache, indexName, true);
+   }
+
+   /**
+    * It's much better to compare performance out of the scope of TestNG by
+    * running this directly as TestNG enables assertions.
+    * 
+    * Suggested test switches:
+    * -Xmx2G -Xms2G -XX:MaxPermSize=128M -XX:+HeapDumpOnOutOfMemoryError -Xss512k -XX:HeapDumpPath=/tmp/java_heap -Djava.net.preferIPv4Stack=true -Djgroups.bind_addr=127.0.0.1 -Xbatch -server -XX:+UseCompressedOops -XX:+UseLargePages -XX:LargePageSizeInBytes=2m -XX:+AlwaysPreTouch
+    */
+   public static void main(String[] args) throws InterruptedException, IOException {
+      PerformanceCompareStressTest test = new PerformanceCompareStressTest();
+      test.beforeTest();
+      try {
+         test.profileTestRAMDirectory();
+      }
+      finally {
+         test.afterTest();
+      }
+      test.beforeTest();
+      try {
+         test.profileTestFSDirectory();
+      }
+      finally {
+         test.afterTest();
+      }
+      test.beforeTest();
+      try {
+         test.profileInfinispanLocalDirectory();
+      }
+      finally {
+         test.afterTest();
+      }
+      test.beforeTest();
+      try {
+         test.profileTestInfinispanDirectoryWithNetworkDelayZero();
+      }
+      finally {
+         test.afterTest();
+      }
    }
 
 }
